GMM_Main/src/objects/Award_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Hours_Sreved_11_15__c</fullName>
        <label>11 - 15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Community_volunteers_managed__c</fullName>
        <label>Hours of Community volunteers managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Community_volunteers_recruited__c</fullName>
        <label>Hours of Community volunteers recruited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Vets_military_fam_mbrs_providin__c</fullName>
        <inlineHelpText>Number of hours the veterans &amp; military family members were engaged in providing services</inlineHelpText>
        <label>Hours of Vet/mil fam mbrs providing svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of__c</fullName>
        <inlineHelpText># of hours the staff &amp; volunteers were trained as a result of capacity-building scvs</inlineHelpText>
        <label>Hours trained by capacity-building svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_agree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_became_over_allowable_guidelines__c</fullName>
        <label>Income over guideline to receive stipend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_Barriers_IN__c</fullName>
        <label>Language Barriers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_Barriers_NIH__c</fullName>
        <label>Language Barriers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_Barriers_V__c</fullName>
        <formula>Language_Barriers_IN__c  +  Language_Barriers_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Barriers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_Barriers__c</fullName>
        <label>Language Barriers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_Disabilities_IN__c</fullName>
        <label>Learning Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_Disabilities_NIH__c</fullName>
        <label>Learning Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_Disabilities_V__c</fullName>
        <formula>Learning_Disabilities_IN__c  +  Learning_Disabilities_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Learning Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male__c</fullName>
        <label>Male</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Match_Comments__c</fullName>
        <label>Match Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Match_Threshold__c</fullName>
        <formula>(of_Federal_Funds_matched_to_date__c  /  of_match_required__c )*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Match__c</fullName>
        <label>Match</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mil_service_members_assistance_received__c</fullName>
        <label>Mil. service members assistance received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Military_service_members_of_clients__c</fullName>
        <label>Mil. Service Members Assistance Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Native_Hawaiian_or_Pacific_Island__c</fullName>
        <label>Native Hawaiian or Pacific Island</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Volunteers_recruited_by_Volunteer_Le__c</fullName>
        <label>New Vols. recruited by Vol. Leaders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_system_biz_processes_enhancements__c</fullName>
        <label>New system &amp; biz processes/enhancements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Volunteers_recruited_by_Senior_Corps__c</fullName>
        <label># of Vols Recruited by Senior Corps Vols</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_volunteers_recruiting_community_v__c</fullName>
        <label>No. of volunteers recruiting community v</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Hispanic_or_Non_Latino__c</fullName>
        <label>Non-Hispanic or Non-Latino</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteer_Leaders__c</fullName>
        <label>Number of Volunteer Leaders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_adult_ex_offenders_served__c</fullName>
        <label>Number of adult ex-offenders served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_caregivers_provided_with_respi__c</fullName>
        <label>Caregivers Provided with Respite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_caregivers_receiving_respite__c</fullName>
        <label>Number of caregivers receiving respite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_children_youth_awaiting_servic__c</fullName>
        <label>Youth awaiting a Foster Grandparent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_seniors_receiving_independent__c</fullName>
        <label>Srs. Receiving Independent Living Svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_veterans_serving_as_volunteers__c</fullName>
        <label># of Veterans Serving as Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Email__c</fullName>
        <description>DDP</description>
        <formula>Award__r.Application_ID__r.Project__r.Organization__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <formula>Award__r.Application_ID__r.Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Phone__c</fullName>
        <description>DDP</description>
        <formula>Award__r.Application_ID__r.Project__r.Organization__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_legal_name__c</fullName>
        <description>DDP</description>
        <formula>Award__r.Organization_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization legal name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <description>Action_Reports__r.NOFA_ID__r.Organization__r.Name__c</description>
        <formula>Award__r.Application_ID__r.Organization_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orgs_experiencing_increase_in_requests__c</fullName>
        <label>Orgs experiencing increase in requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orgs_receiving_capacity_building_svcs__c</fullName>
        <label>Orgs receiving capacity-building svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orgs_reporting_activities_making_org_mor__c</fullName>
        <label>Orgs reporting activities making org mor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orgs_that_completed_a_comm_assessment_id__c</fullName>
        <label>Orgs that completed a comm assessment id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orgs_w_3_effective_vol_mgmt_practices__c</fullName>
        <label>Orgs w/ 3+ effective vol. mgmt practices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Special_Needs_IN__c</fullName>
        <label>Other Special Needs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Special_Needs_NIH__c</fullName>
        <label>Other Special Needs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Special_Needs_V__c</fullName>
        <formula>Other_Special_Needs_IN__c  +  Other_Special_Needs_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Special Needs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_issues__c</fullName>
        <description>Other issues</description>
        <label>Other issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM_Module__c</fullName>
        <label>PM Module</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Email__c</fullName>
        <description>As per #939</description>
        <label>PO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PO_Name__c</fullName>
        <formula>Award_Name__r.PO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>IF(Authorized_By__c != null,$User.MobilePhone,null)</formula>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Disabilities_I_N__c</fullName>
        <label>Physical Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Disabilities_NIH__c</fullName>
        <label>Physical Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Disabilities_V__c</fullName>
        <formula>Physical_Disabilities_I_N__c  +  Physical_Disabilities_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Poor_performance__c</fullName>
        <label>Poor performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Amounts_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Amounts Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Director__c</fullName>
        <label>Program Director</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Program_income_expended_in_accordance_w__c</fullName>
        <inlineHelpText>Program Income expended in accordance with the addition alternative.</inlineHelpText>
        <label>Income Expended with the Addition Alt.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_income_expended_in_accordance_wi__c</fullName>
        <inlineHelpText>Program Income expended in accordance with the deduction alternative.</inlineHelpText>
        <label>Income Expended with the Deduction Alt.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Progress_Report_Type__c</fullName>
        <label>Progress Report Types</label>
        <picklist>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Award__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <description>Updates Project Title from Award</description>
        <label>Project Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Receiving_Disaster_Services__c</fullName>
        <label>Receiving Disaster Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Economic_Opportunity_Services__c</fullName>
        <label>Receiving Economic Opportunity Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Education_Services__c</fullName>
        <label>Receiving Education Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Environmental_Stewardship_svcs__c</fullName>
        <label>Receiving Environmental Stewardship svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Healthy_Futures_Services__c</fullName>
        <label>Receiving Healthy Futures Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Veteran_Military_Family_svcs__c</fullName>
        <label>Receiving Veteran/Military Family svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient_include_non_federal_funds__c</fullName>
        <description>req #794</description>
        <inlineHelpText>Does the recipient share of expenditures include funds from other federal (non-CNCS) sources?</inlineHelpText>
        <label>Recipient  include non-federal funds</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipient_share_of_exp_Cumulative__c</fullName>
        <label>Share of Expenditures – Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recipient_share_of_exp_This_Period__c</fullName>
        <label>Share of Expenditures – This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recipient_share_of_expenditures__c</fullName>
        <label>Share of Expenditures – Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recshare_of_exp_incl_funds_oth_fed_fund__c</fullName>
        <label>Recipient $s include non-federal funds?</label>
        <picklist>
            <controllingField>State_and_National_specific_box__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remaining_recipient_share_to_be_provided__c</fullName>
        <formula>Total_Recipient_share_required__c   -  Recipient_share_of_expenditures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining recipient share to be provided</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_to_be_Provided_Cumulative__c</fullName>
        <formula>Remaining_to_be_Provided_Previous__c  +  Remaining_to_be_Provided_This_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining to be Provided – Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_to_be_Provided_Previous__c</fullName>
        <label>Remaining to be Provided – Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_to_be_Provided_This_Period__c</fullName>
        <label>Remaining to be Provided – This Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <inlineHelpText>Attach any explanations deemed necessary or information required by Federal sponsoring agency in compliance with governing legislation</inlineHelpText>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReportId__c</fullName>
        <externalId>true</externalId>
        <label>ReportId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Report_Name1__c</fullName>
        <label>Corporate Program Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reported_Obligations__c</fullName>
        <description>Reported Obligations</description>
        <label>Reported Obligations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_End_Date__c</fullName>
        <label>Reporting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <formula>TEXT(Reporting_Start_Date__c) + &apos;-&apos; + TEXT(Reporting_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Periods__c</fullName>
        <label>Reporting Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Start_Date__c</fullName>
        <label>Reporting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resubmission_Date_Received__c</fullName>
        <description>This date will be filled once FFR has been resubmitted by Grantee</description>
        <label>Resubmission Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resubmission_Due_Date__c</fullName>
        <description>This date will be filled if FFR needs to be sent back to Grantee for rework.</description>
        <label>Resubmission Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serve_11_or_more_weekly__c</fullName>
        <label>Serve 11 or more weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serve_1_client_weekly__c</fullName>
        <label>Serve 1 client weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serve_2_clients_weekly__c</fullName>
        <label>Serve 2 clients weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serve_3_5_clients_weekly__c</fullName>
        <label>Serve 3 - 5 clients weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serve_6_10_clients_weekly__c</fullName>
        <label>Serve 6 - 10 clients weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Term_Disabilities_IN__c</fullName>
        <label>Short-Term Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Term_Disabilities_NIH__c</fullName>
        <label>Short-Term Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Term_Disabilities_V__c</fullName>
        <formula>Short_Term_Disabilities_IN__c  +  Short_Term_Disabilities_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short-Term Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Term_Disabilities__c</fullName>
        <label>Short-Term Disabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_and_National_specific_box__c</fullName>
        <label>State and National specific box</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed and Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Re-work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Due_Date__c</fullName>
        <formula>Grant_End_Date__c + 90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <label>Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_IN__c</fullName>
        <label>Substance Abuse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_NIH__c</fullName>
        <label>Substance Abuse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_V__c</fullName>
        <formula>Substance_Abuse_IN__c  +  Substance_Abuse_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Substance Abuse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teen_Pregnancy_Teen_Parenting_IN__c</fullName>
        <label>Teen Pregnancy/Teen Parenting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teen_Pregnancy_Teen_Parenting_NIH__c</fullName>
        <label>Teen Pregnancy/Teen Parenting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teen_Pregnancy_Teen_Parenting_V__c</fullName>
        <formula>Teen_Pregnancy_Teen_Parenting_IN__c  +  Teen_Pregnancy_Teen_Parenting_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teen Pregnancy/Teen Parenting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminally_Ill_IN__c</fullName>
        <label>Terminally Ill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminally_Ill_NIH__c</fullName>
        <label>Terminally Ill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminally_Ill_V__c</fullName>
        <formula>Terminally_Ill_IN__c  +  Terminally_Ill_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terminally Ill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminally_Ill__c</fullName>
        <label>Terminally Ill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timely_Submission__c</fullName>
        <description>If FFR has been submitted before or on the due date, then Update “on time”


If FFR has extended due date and FFR has been submitted before or on the extended due date, then Update “on time”


If FFR is submitted after due date and/or extended due date, then Update “late”</description>
        <formula>IF(Date_report_submitted__c&lt;=Due_Date__c&amp;&amp;ISNULL(Extended_Due_Date__c),&apos;On time&apos;,(IF(NOT(ISNULL(Extended_Due_Date__c))&amp;&amp;Date_report_submitted__c&lt;=Extended_Due_Date__c,&apos;On time&apos;,&apos;Late&apos;)))</formula>
        <label>Timely Submission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Fed_Funds_authorized_Cumulative__c</fullName>
        <label>Total Fed Funds authorized-Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fed_Funds_authorized_This_Period__c</fullName>
        <label>Total Fed Funds authorized-This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Funds_authorized__c</fullName>
        <label>Total Federal Funds authorized-Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Share_Previous__c</fullName>
        <description>bug #3453</description>
        <label>Total Federal Share – Previous</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Share_This_Period__c</fullName>
        <description>bug #3453</description>
        <label>Total Federal Share – This Period</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Non_Stipend_Volunteers__c</fullName>
        <label># of Non-Stipend Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Recipient_share_req_Cumulative__c</fullName>
        <label>Total Share Required – Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recipient_share_req_ThisPeriod__c</fullName>
        <label>Total Share Required – This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recipient_share_required__c</fullName>
        <label>Total Share Required – Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_federal_program_income_earned_no__c</fullName>
        <inlineHelpText>Total federal program income earned (not reported above)</inlineHelpText>
        <label>Total Federal Program Income Earned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_federal_share__c</fullName>
        <formula>Total_Federal_Funds_authorized__c + Federal_Share_of_unliquidated_obligation__c  +  Federal_Share_of_expenditures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Federal Share – Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_number_of_Immigrants_served__c</fullName>
        <label>Number of Immigrants Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_Volunteers__c</fullName>
        <label>Total number of Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_Volunteers_non_federally__c</fullName>
        <label># of Volunteers Non-Federally Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>